# vstr

./: .gitignore  CMakeLists.txt  build.sh  example.c
include/vstr/: vstr.h
